<resources>
    <string name="app_name">Donat Mg Moments</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="home_screen">Home screen</string>
    <string name="settings">Settings</string>
    <string name="seznam">List</string>
    <string name="home_screen_title">Take a moment for your health. This application provides tips for drinking Donat Mg natural mineral water based on the knowledge of the Medical Centre Rogaška, which has been treating patients for over 200 years. A doctor specialising in balneology prescribes a method of drinking Donat Mg from the source following a careful examination and other tests; now you too can access general tips for drinking mineral water.</string>
    <string name="drinking">Method of drinking</string>
    <string name="interval">Duration</string>
    <string name="start_date">Selected starting date for drinking:</string>
    <string name="button_indication_start">TURN ON</string>
    <string name="button_indication_stop">TURN OFF</string>
    <string name="confirmation_title">You have successfully set a reminder</string>
    <string name="confirmation_desc">A reminder to drink Donat Mg is now set. To your health!</string>
    <string name="confirmation_back">Back to entry page</string>
    <string name="save">SAVE</string>
    <string name="zbujanje">Waking up</string>
    <string name="zajtrk">Breakfast</string>
    <string name="kosilo">Lunch</string>
    <string name="vecerja">Dinner</string>
    <string name="spanje">Sleeping</string>
    <string-array name="obrokov">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="close">CLOSE</string>
    <string name="home">Back</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="rate_it_title">Do you like the application?</string>
    <string name="rate_it_desc">Please take a moment and assess your satisfaction with the Donat Mg Moments application. We value your opinion!</string>
    <string name="rate_it_later">REMIND ME LATER</string>
    <string name="rate_it">ASSESS THE APPLICATION</string>
    <string name="licence">© Droga Kolinska d.d. All rights reserved. Droga Kolinska is part of the Atlantic Group.</string>
    <string name="rules">Terms and conditions of use</string>
    <string name="rules_title">General terms and conditions of use for the Donat Mg Moments mobile application</string>
    <string name="choose_language">Izberi jezik</string>
    <string name="choose_obrokov">Number of meals</string>
</resources>