<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@color/background_white" >
    
	<LinearLayout
	    android:id="@+id/close"
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    style="@style/DialogTitle"
	    android:padding="@dimen/layout_vertical_padding" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			style="@style/DialogTitle" >
		    
			<TextView
		        android:id="@+id/confirmation_title"
		        android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/confirmation_title"
				style="@style/DialogTitleText"
	       		android:layout_weight="5" />
				
		    <ImageView
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:src="@drawable/ic_close"
				android:layout_weight="1" />
			
		</LinearLayout>     
			
		<TextView
		    android:id="@+id/confirmation_desc"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/title_vertical_padding"
		    style="@style/DialogText"
	       	android:fontFamily="sans-serif-light"
			android:text="@string/confirmation_desc" />
	 
	</LinearLayout>

    <LinearLayout
        android:id="@+id/back"
	    style="@style/HomeScreenTitle"
        android:layout_width="match_parent"
		android:layout_height="@dimen/button_height"
		android:orientation="horizontal" >
			
	    <ImageView
	        android:layout_width="@dimen/title_height"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="@dimen/title_vertical_padding"
		    android:layout_marginRight="@dimen/title_vertical_padding"
		    android:src="@drawable/ic_back" />
	    
		<TextView
		    android:id="@+id/confirmation_back"
		    style="@style/DialogConfirmText"
		    android:fontFamily="sans-serif"
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:text="@string/confirmation_back" />

   </LinearLayout> 
   
</LinearLayout>    